# simplicate-rs

./: Cargo.toml
src/: generic.rs  hours.rs  lib.rs  projects.rs  structures.rs  traits.rs
