[package]
name = "simplicate"
version = "0.1.0"
authors = ["don <d.rasiukevicius@labdigital.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.102"
reqwest = "0.9.22"
chrono = {version = "0.4.9", features = ["serde"]}
